--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,5 +10,7 @@ jobs:
         with:
           distribution: zulu
           java-version: 19
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
       - name: Build & test
         run: ./gradlew build
