--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,4 +13,4 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Build & test
-        run: ./gradlew build
+        run: ./gradlew build --scan
